<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Parse Starter Project</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="or_login">or Login</string>
    <string name="name">Name</string>
    <string name="send">SEND</string>
    <string name="logout">Logout</string>
    <string name="text_schedule">Text Schedule</string>
    <string name="select_time">SELECT TIME</string>
    <string name="to">TO</string>
    <string name="select_date">SELECT DATE</string>
    <string name="type_the_message">Type the message</string>
    <string name="schedule">🕙</string>
</resources>
